--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <img src="images/light_logo.svg" alt="Angelika Wysocka - Web Developer Portfolio Logo" class="light-logo">
                 <img src="images/AngelikaWysocka_dark.webp" alt="Angelika Wysocka - Professional Web Developer and Designer Portrait" class="profile-image">
                 <h1 class="name-heading">Angelika Wysocka</h1>
-                <h2 class="subtitle">Product Designer & Developer</h2>
-                <h2 class="subtitle">Wishaw, Scotland, UK</h2>
+                <h3 class="subtitle">Product Designer & Developer</h3>
+                <h3 class="subtitle">Wishaw, Scotland, UK</h3>
                 <div class="buttons-container" style="display: flex; justify-content: center; gap: 20px; padding: 20px;">
                     <a href="https://github.com/nana13w" class="github-icon-link" aria-label="View my GitHub profile"><img
                         src="images/icons/github-light.svg" alt="Visit my GitHub profile for code repositories" class="github-icon"
@@ -124,41 +124,41 @@
             </div>
             <div class="right-column">
                 <section id="home">
-                    <h1 class="section-heading">
+                    <div class="section-heading">
                         <span class="hello-line">Hello <img src="images/icons/hand.svg" alt="Animated waving hand emoji"
                                 class="wave"></span>
                         <span class="im-line">I'm <img src="images/icons/name.svg" alt="Angelika Wysocka handwritten signature" class="name">.</span>
                         <br class="im-line-break">
-                        <span class="im-line-two">I'm <span class="letter">a</span>
+                        <span class="im-line-two">I'm</span> <span class="letter">a</span>
                             <span class="titles">
                                 <span class="title-item">Web Developer</span>
                                 <span class="title-item">Front End Developer</span>
                                 <span class="title-item">Back End Developer</span>
                                 <span class="title-item">Problem Solver</span>
                             </span>
-                    </h1>
+                        </div>
                     <p class="intro-text">I'm passionate about building modern, user-friendly websites that bring ideas
                         to
                         life. I'm passionate about turning ideas into websites that are both beautiful and functional.
                     </p>
                     <div class="three-squares-container">
                         <div class="square">
-                            <h1 class="square-number">+3</h1>
+                            <h2 class="square-number">+3</h2>
                             <p class="square-label">years of<br>experience</p>
                         </div>
                         <div class="square">
-                            <h1 class="square-number">+5</h1>
+                            <h2 class="square-number">+5</h2>
                             <p class="square-label">projects<br>completed</p>
                         </div>
                         <div class="square">
-                            <h1 class="square-number">+4k</h1>
+                            <h2 class="square-number">+4k</h2>
                             <p class="square-label">hours of<br>coding</p>
                         </div>
                     </div>
                 </section>
 
                 <section id="about">
-                    <h1 class="section-heading">About Me</h1>
+                    <h2 class="section-heading">About Me</h2>
                     <p>I'm a proud mum of two who loves making memories with my children. </p>
                     <p>I've always been eager to learn,
                         which led me through careers in childcare, accounting, beauty, and IT — but nothing clicked like
@@ -173,7 +173,7 @@
                         me
                         grow and improve every day.
                     </p>
-                    <h2>My Journey</h2>
+                    <h3>My Journey</h3>
                     <div class="vertical-timeline">
                         <div class="timeline-item">
                             <div class="timeline-year">2019</div>
@@ -196,7 +196,7 @@
                 </section>
 
                 <section id="skills">
-                    <h1 class="section-heading">Skills</h1>
+                    <h2 class="section-heading">Skills</h2>
                     <div class="skills-grid">
                         <div class="skill-box">
                             <img src="images/icons/html.svg" alt="HTML5 - Web Development Markup Language" class="skill-logo">
@@ -286,7 +286,7 @@
                 </section>
 
                 <section id="projects">
-                    <h1 class="section-heading">Projects</h1>
+                    <h2 class="section-heading">Projects</h2>
                     <div id="projectCarousel" class="carousel slide" style="position: relative;"
                         data-bs-interval="false">
                         <div class="carousel-controls-top">
@@ -311,7 +311,7 @@
                                             data-hover-src="images/portfolio_items/joSmith/joSmith_website_noColour.webp">
                                         <div class="project-overlay-grid">
                                             <div class="project-description-container">
-                                    <h4>Jo Smith Portfolio</h4>
+                                    <h5>Jo Smith Portfolio</h5>
                                                 <span class="project-description">
                                                     A clean, modern portfolio site for a fictional photographer, built
                                                     with HTML,
@@ -387,7 +387,7 @@
                                             data-hover-src="images/portfolio_items/vinylsOnline/screenshot_noColour.webp">
                                         <div class="project-overlay-grid">
                                             <div class="project-description-container">
-                                                <h4>Vinyls Online</h4>
+                                                <h5>Vinyls Online</h5>
                                                 <span class="project-description">
                                                     A vinyl records e-commerce website with shopping & selling vinyls
                                                     and user authentication, built with PHP and MySQL.
@@ -432,8 +432,7 @@
                                                 <img src="images/icons/php.svg" alt="PHP">
                                                 <img src="images/icons/mysql.svg" alt="MySQL">
                                                 <img src="images/icons/vscode.svg" alt="VSCode">
-                                                <img src="images/icons/github-light.svg" class="github-icon alt="
-                                                    GitHub">
+                                                <img src="images/icons/github-light.svg" class="github-icon" alt="GitHub">
                                                 <img src="images/icons/canva.svg" alt="Canva">
 
                                                 <!-- Duplicated set for seamless loop -->
@@ -443,8 +442,7 @@
                                                 <img src="images/icons/php.svg" alt="PHP">
                                                 <img src="images/icons/mysql.svg" alt="MySQL">
                                                 <img src="images/icons/vscode.svg" alt="VSCode">
-                                                <img src="images/icons/github-light.svg" class="github-icon alt="
-                                                    GitHub">
+                                                <img src="images/icons/github-light.svg" class="github-icon" alt="GitHub">
                                                 <img src="images/icons/canva.svg" alt="Canva">
                                             </div>
                                         </div>
@@ -462,7 +460,7 @@
                                             data-hover-src="images/portfolio_items/ninaAndNiko/screenshot_noColour.webp">
                                         <div class="project-overlay-grid">
                                             <div class="project-description-container">
-                                                <h4>Nina and Niko</h4>
+                                                <h5>Nina and Niko</h5>
                                                 <span class="project-description">
                                                     A drag-and-drop sorting game for children built with HTML, CSS,
                                                     JavaScript and jQuery.
@@ -506,8 +504,7 @@
                                                 <img src="images/icons/js.svg" alt="JavaScript">
                                                 <img src="images/icons/jquery.svg" alt="jQuery">
                                                 <img src="images/icons/vscode.svg" alt="VSCode">
-                                                <img src="images/icons/github-light.svg" class="github-icon alt="
-                                                    GitHub">
+                                                <img src="images/icons/github-light.svg" class="github-icon" alt="GitHub">
                                                 <img src="images/icons/canva.svg" alt="Canva">
 
                                                 <!-- Duplicated set for seamless loop -->
@@ -516,9 +513,8 @@
                                                 <img src="images/icons/js.svg" alt="JavaScript">
                                                 <img src="images/icons/jquery.svg" alt="jQuery">
                                                 <img src="images/icons/vscode.svg" alt="VSCode">
-                                                <img src="images/icons/github-light.svg" class="github-icon alt="
-                                                    GitHub">
-                                    <img src="images/icons/canva.svg" alt="Canva">
+                                                <img src="images/icons/github-light.svg" class="github-icon" alt="GitHub">
+                                                <img src="images/icons/canva.svg" alt="Canva">
                                             </div>
                                         </div>
 
@@ -535,7 +531,7 @@
                                             data-hover-src="images/portfolio_items/bikeKingBorders/screenshot_noColour.webp">
                                         <div class="project-overlay-grid">
                                             <div class="project-description-container">
-                                                <h4>Bike King Borders</h4>
+                                                <h5>Bike King Borders</h5>
                                                 <span class="project-description">
                                                     A responsive bike shop website with product catalog and service
                                                     booking, built with HTML, CSS and JavaScript.
@@ -577,16 +573,14 @@
                                                 <img src="images/icons/html.svg" alt="HTML5">
                                                 <img src="images/icons/css.svg" alt="CSS3">
                                                 <img src="images/icons/js.svg" alt="JavaScript">
-                                                <img src="images/icons/github-light.svg" class="github-icon alt="
-                                                    GitHub">
+                                                <img src="images/icons/github-light.svg" class="github-icon" alt="GitHub">
                                                 <img src="images/icons/canva.svg" alt="Canva">
 
                                                 <!-- Duplicated set for seamless loop -->
                                                 <img src="images/icons/html.svg" alt="HTML5">
                                                 <img src="images/icons/css.svg" alt="CSS3">
                                                 <img src="images/icons/js.svg" alt="JavaScript">
-                                                <img src="images/icons/github-light.svg" class="github-icon"
-                                                    alt="GitHub">
+                                                <img src="images/icons/github-light.svg" class="github-icon" alt="GitHub">
                                                 <img src="images/icons/canva.svg" alt="Canva">
                                             </div>
                                         </div>
@@ -599,7 +593,7 @@
                 </section>
 
                 <section id="testimonials">
-                    <h1 class="section-heading">Testimonials</h1>
+                    <h2 class="section-heading">Testimonials</h2>
                     <div id="testimonialCarousel" class="carousel slide testimonials-container position-relative"
                         data-bs-ride="carousel" data-bs-interval="6000">
                         <div class="testimonial-controls carousel-controls-top">
@@ -621,7 +615,7 @@
                                         <img src="images/profil1.webp" alt="John Smith - Client Testimonial" class="profile-pic">
                                     </div>
                                     <div class="testimonial-author ms-3">
-                                        <h3>John Smith</h3>
+                                        <h4>John Smith</h4>
                                         <span class="author-title">AI-Generated Content</span>
                                     </div>
                                 </div>
@@ -639,7 +633,7 @@
                                         <img src="images/profil2.webp" alt="Sarah Johnson - Client Testimonial" class="profile-pic">
                                     </div>
                                     <div class="testimonial-author ms-3">
-                                        <h3>Sarah Johnson</h3>
+                                        <h4>Sarah Johnson</h4>
                                         <span class="author-title">AI-Generated Content</span>
                                     </div>
                                 </div>
@@ -656,7 +650,7 @@
                                         <img src="images/profil3.webp" alt="Michael Brown - Client Testimonial" class="profile-pic">
                                     </div>
                                     <div class="testimonial-author ms-3">
-                                        <h3>Michael Brown</h3>
+                                        <h4>Michael Brown</h4>
                                         <span class="author-title">AI-Generated Content</span>
                                     </div>
                                 </div>
@@ -672,7 +666,7 @@
                 </section>
 
                 <section id="contact">
-                    <h1 class="section-heading">Let's Talk</h1>
+                    <h2 class="section-heading">Let's Talk</h2>
                     <form id="sectionContactForm" class="contact-form" action="https://formspree.io/f/xanoaynb" method="POST">
                         <input type="hidden" name="_captcha" value="false">
                         <div class="form-group">
@@ -693,9 +687,15 @@
                         <button type="submit" class="submit-button">Send Message</button>
                     </form>
                 </section>
+
+                <footer>
+                    <p class="footer-text">© 2025 Angelika Wysocka. All rights reserved.</p>
+                </footer>
+                
             </div>
         </div>
     </div>
+
 
     <button id="scrollToTop" class="scroll-to-top">
         <i class="bi bi-arrow-up-circle-fill"></i>
@@ -710,7 +710,7 @@
             <div class="modal-body">
                 <div class="modal-header">
                     <div></div>
-                    <h1 class="section-heading">Let's Talk</h1>
+                    <h2 class="section-heading">Let's Talk</h2>
                     <button class="close-button">&times;</button>
                 </div>
 
@@ -741,7 +741,10 @@
     <!-- Lightbox Modal for Project Images -->
     <div id="imageModal">
         <div class="modal-image-container">
-            <img id="modalImage" src="" alt="Enlarged project image view" aria-label="Project preview in modal">
+            <img id="modalImage" 
+                src="images/placeholder.webp" 
+                alt="Enlarged project image view" 
+                aria-label="Project preview in modal">
         </div>
     </div>
 </body>
