--- a/index.html
+++ b/index.html
@@ -104,15 +104,8 @@
         <div class="container">
             <div class="left-column">
 
-                <!-- Inline SVG logo for faster LCP -->
-                <svg class="light-logo" aria-label="Angelika Wysocka - Web Developer Portfolio Logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="500" zoomAndPan="magnify" viewBox="0 0 375 149.999998" height="200" preserveAspectRatio="xMidYMid meet" version="1.0"><defs><g/></defs><g fill="#ffffff" fill-opacity="1"><g transform="translate(4.563412, 96.749996)"><g><path d="M 38.664062 -29.753906 C 38.664062 -29.195312 38.382812 -28.746094 37.824219 -28.410156 C 35.527344 -27.121094 32.808594 -25.664062 29.671875 -24.039062 C 26.53125 -22.414062 23.367188 -20.816406 20.171875 -19.246094 C 16.980469 -17.679688 14.148438 -16.304688 11.683594 -15.128906 C 13.8125 -14.289062 16.039062 -13.351562 18.367188 -12.3125 C 20.691406 -11.277344 22.960938 -10.253906 25.171875 -9.246094 C 27.386719 -8.238281 29.335938 -7.285156 31.015625 -6.386719 C 31.632812 -6.109375 31.941406 -5.632812 31.941406 -4.960938 C 31.941406 -4.566406 31.785156 -4.175781 31.476562 -3.78125 C 31.167969 -3.390625 30.792969 -3.195312 30.34375 -3.195312 C 30.230469 -3.195312 30.089844 -3.207031 29.921875 -3.234375 C 29.753906 -3.265625 29.613281 -3.304688 29.503906 -3.363281 C 27.484375 -4.425781 25.117188 -5.574219 22.398438 -6.808594 C 19.683594 -8.042969 16.949219 -9.246094 14.203125 -10.421875 C 11.460938 -11.597656 8.992188 -12.609375 6.808594 -13.449219 C 5.910156 -13.785156 5.464844 -14.316406 5.464844 -15.046875 C 5.464844 -15.71875 5.882812 -16.222656 6.722656 -16.558594 C 8.347656 -17.230469 10.394531 -18.167969 12.859375 -19.375 C 15.324219 -20.578125 17.972656 -21.882812 20.804688 -23.28125 C 23.632812 -24.683594 26.390625 -26.085938 29.082031 -27.484375 C 31.773438 -28.886719 34.125 -30.148438 36.140625 -31.265625 C 36.480469 -31.4375 36.757812 -31.519531 36.984375 -31.519531 C 37.429688 -31.519531 37.824219 -31.335938 38.160156 -30.972656 C 38.496094 -30.609375 38.664062 -30.203125 38.664062 -29.753906 Z M 38.664062 -29.753906 "/><...TRUNCATED FOR BREVITY.../></svg>
-                <!-- Responsive profile image: use a smaller image for mobile screens -->
-                <picture>
-                  <!-- TODO: Create and compress images/AngelikaWysocka_dark-mobile.webp (e.g., 300px wide, <50KB) -->
-                  <source srcset="images/AngelikaWysocka_dark-mobile.webp" media="(max-width: 600px)">
-                  <source srcset="images/AngelikaWysocka_dark.webp">
-                  <img decoding="async" src="images/AngelikaWysocka_dark.webp" alt="Angelika Wysocka - Professional Web Developer and Designer Portrait" class="profile-image" width="400" height="400">
-                </picture>
+                <img src="images/light_logo.svg" alt="Angelika Wysocka - Web Developer Portfolio Logo" class="light-logo">
+                <img loading="lazy" decoding="async" src="images/AngelikaWysocka_dark.webp" alt="Angelika Wysocka - Professional Web Developer and Designer Portrait" class="profile-image">
                 <h1 class="name-heading">Angelika Wysocka</h1>
                 <h3 class="subtitle">Product Designer & Developer</h3>
                 <h3 class="subtitle">Wishaw, Scotland, UK</h3>
