--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="css/style.css"></noscript>
     <link rel="preload" href="css/media.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="css/media.css"></noscript>
-    
+    <noscript><link rel="stylesheet" href="css/media.css"></noscript>
+        
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
@@ -85,7 +85,7 @@
 
                 <img src="images/light_logo.svg" alt="Angelika Wysocka - Web Developer Portfolio Logo"
                     class="light-logo">
-                <img src="images/AngelikaWysocka_dark.webp" srcset="images/AngelikaWysocka_dark.webp 400w,
+                <img src="images/AngelikaWysocka_dark.webp" decoding="async" srcset="images/AngelikaWysocka_dark.webp 400w,
                         images/AngelikaWysocka_dark.webp 800w" sizes="(max-width: 600px) 400px, 800px" alt="..."
                     decoding="async" class="profile-image">
                 <h1 class="name-heading">Angelika Wysocka</h1>
@@ -759,5 +759,38 @@
     </div>
 </body>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script defer type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Angelika Wysocka",
+      "jobTitle": "Web Developer & Designer",
+      "url": "https://nana13w.github.io/portfolio/",
+      "image": "images/AngelikaWysocka_dark.webp",
+      "sameAs": [
+        "https://github.com/nana13w",
+        "https://www.linkedin.com/in/angelika-wysocka-087925213"
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Wishaw",
+        "addressRegion": "Scotland",
+        "addressCountry": "UK"
+      },
+      "description": "Web Developer and Designer specializing in modern, user-friendly websites with expertise in front-end and back-end development.",
+      "knowsAbout": [
+        "HTML5",
+        "CSS3",
+        "JavaScript",
+        "Bootstrap",
+        "jQuery",
+        "PHP",
+        "MySQL",
+        "WordPress",
+        "Web Development",
+        "UI/UX Design"
+      ]
+    }
+    </script>
 </html>
