--- a/index.html
+++ b/index.html
@@ -20,14 +20,46 @@
     <title>Angelika Wysocka - Web Developer & Designer Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
-    <link rel="preload" href="css/media.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/media.css"></noscript>
-        
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Angelika Wysocka",
+      "jobTitle": "Web Developer & Designer",
+      "url": "https://nana13w.github.io/portfolio/",
+      "image": "images/AngelikaWysocka_dark.webp",
+      "sameAs": [
+        "https://github.com/nana13w",
+        "https://www.linkedin.com/in/angelika-wysocka-087925213"
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Wishaw",
+        "addressRegion": "Scotland",
+        "addressCountry": "UK"
+      },
+      "description": "Web Developer and Designer specializing in modern, user-friendly websites with expertise in front-end and back-end development.",
+      "knowsAbout": [
+        "HTML5",
+        "CSS3",
+        "JavaScript",
+        "Bootstrap",
+        "jQuery",
+        "PHP",
+        "MySQL",
+        "WordPress",
+        "Web Development",
+        "UI/UX Design"
+      ]
+    }
+    </script>
 </head>
 
 <body>
@@ -758,39 +790,5 @@
         </div>
     </div>
 </body>
-<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js" defer></script>
-    <script defer type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Angelika Wysocka",
-      "jobTitle": "Web Developer & Designer",
-      "url": "https://nana13w.github.io/portfolio/",
-      "image": "images/AngelikaWysocka_dark.webp",
-      "sameAs": [
-        "https://github.com/nana13w",
-        "https://www.linkedin.com/in/angelika-wysocka-087925213"
-      ],
-      "address": {
-        "@type": "PostalAddress",
-        "addressLocality": "Wishaw",
-        "addressRegion": "Scotland",
-        "addressCountry": "UK"
-      },
-      "description": "Web Developer and Designer specializing in modern, user-friendly websites with expertise in front-end and back-end development.",
-      "knowsAbout": [
-        "HTML5",
-        "CSS3",
-        "JavaScript",
-        "Bootstrap",
-        "jQuery",
-        "PHP",
-        "MySQL",
-        "WordPress",
-        "Web Development",
-        "UI/UX Design"
-      ]
-    }
-    </script>
+
 </html>
