--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preload" as="image" href="images/AngelikaWysocka_dark.webp" type="image/webp">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js" defer></script>
     <script type="application/ld+json">
@@ -105,7 +106,7 @@
             <div class="left-column">
 
                 <img src="images/light_logo.svg" alt="Angelika Wysocka - Web Developer Portfolio Logo" class="light-logo">
-                <img decoding="async" src="images/AngelikaWysocka_dark.webp" alt="Angelika Wysocka - Professional Web Developer and Designer Portrait" class="profile-image">
+                <img fetchpriority="high" decoding="async" src="images/AngelikaWysocka_dark.webp" alt="Angelika Wysocka - Professional Web Developer and Designer Portrait" class="profile-image">
                 <h1 class="name-heading">Angelika Wysocka</h1>
                 <h3 class="subtitle">Product Designer & Developer</h3>
                 <h3 class="subtitle">Wishaw, Scotland, UK</h3>
