--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
             <div class="left-column">
 
                 <img src="images/light_logo.svg" alt="Angelika Wysocka - Web Developer Portfolio Logo" class="light-logo">
-                <img loading="lazy" decoding="async" src="images/AngelikaWysocka_dark.webp" alt="Angelika Wysocka - Professional Web Developer and Designer Portrait" class="profile-image">
+                <picture>
+                    <source srcset="images/AngelikaWysocka_dark-mobile.webp" media="(max-width: 600px)">
+                    <img decoding="async" src="images/AngelikaWysocka_dark.webp" alt="Angelika Wysocka - Professional Web Developer and Designer Portrait" class="profile-image" width="400" height="400">
+                </picture>
                 <h1 class="name-heading">Angelika Wysocka</h1>
                 <h3 class="subtitle">Product Designer & Developer</h3>
                 <h3 class="subtitle">Wishaw, Scotland, UK</h3>
