--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <meta property="og:title" content="Angelika Wysocka - Web Developer Portfolio">
     <meta property="og:description" content="Portfolio showcasing web development projects and skills by Angelika Wysocka">
     <meta property="og:image" content="images/AngelikaWysocka_dark.webp">
-    <meta property="og:url" content="https://nana13w.github.io/portfolio/">
-    <meta name="twitter:card" content="summary_large_image">
-    <link rel="canonical" href="https://nana13w.github.io/portfolio/">
     <title>Angelika Wysocka - Web Developer & Designer Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -57,7 +54,8 @@
       ]
     }
     </script>
-
+    <link rel="preload" as="image" href="images/AngelikaWysocka_dark.webp">
+    <link rel="preload" as="image" href="images/AngelikaWysocka_dark-mobile.webp">
     <style>
         /* Left column */
 .left-column {
