--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
     <link rel="preload" as="image" href="images/AngelikaWysocka_dark.webp">
     <link rel="preload" as="image" href="images/AngelikaWysocka_dark-mobile.webp">
     <style>
+        html,
+        body {
+            overflow-x: hidden;
+            overflow-y: auto;
+            height: 100%;
+            max-height: 100%;
+        }
+
+        body {
+            background-image: url('../images/dark_background.webp');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            min-height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
+
         .container {
             display: flex;
             align-items: flex-start;
@@ -102,6 +121,52 @@
             object-fit: cover;
             margin: 0 auto;
             display: block;
+        }
+
+        @media (max-width: 764px) {
+
+            #skills {
+                padding-top: 100px !important;
+            }
+
+            .container {
+                flex-direction: column !important;
+                align-items: stretch !important;
+            }
+
+            .left-column {
+                width: 90% !important;
+                max-width: 90% !important;
+                margin-left: auto !important;
+                margin-right: auto !important;
+            }
+
+            .timer {
+                position: fixed;
+                top: 75px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            .container {
+                flex-direction: column;
+                align-items: center;
+                padding: 0 20px;
+            }
+
+            .left-column {
+                position: static;
+                width: 80% !important;
+                max-width: 80% !important;
+                margin: auto;
+                min-height: auto;
+            }
+
+            .profile-image {
+                width: 70%;
+                margin-left: auto;
+                margin-right: auto;
+            }
         }
     </style>
 </head>
