--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
         content="Portfolio showcasing web development projects and skills by Angelika Wysocka">
     <meta property="og:image" content="images/AngelikaWysocka_dark.webp">
     <title>Angelika Wysocka - Web Developer & Designer Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" media="print"
+        onload="this.media='all'">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+        media="print" onload="this.media='all'">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <noscript>
-        <link rel="preload" rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap" onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="preload" rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap"
+            onload="this.onload=null;this.rel='stylesheet'">
     </noscript>
     <noscript>
-        <link rel="preload" rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="preload" rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap"
+            onload="this.onload=null;this.rel='stylesheet'">
     </noscript>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="js/script.js" defer></script>
     <script type="application/ld+json">
     {
@@ -60,6 +66,7 @@
       ]
     }
     </script>
+    <link rel="preload" as="image" href="images/light_background.webp">
     <link rel="preload" as="image" href="images/AngelikaWysocka_dark.webp">
     <link rel="preload" as="image" href="images/AngelikaWysocka_dark-mobile.webp">
     <style>
@@ -80,6 +87,47 @@
             min-height: 100vh;
             margin: 0;
             padding: 0;
+        }
+
+        p {
+            color: #ffffff;
+            font-family: 'Roboto', sans-serif;
+            font-size: 1.13rem;
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+
+        html {
+            scroll-behavior: smooth;
+        }
+
+        section {
+            padding: 20px 0;
+            padding-bottom: 20px !important;
+            scroll-margin-top: 100px;
+        }
+
+
+        h3 {
+            font-family: 'Anton', sans-serif;
+            color: #ffffff;
+            margin-top: 40px;
+        }
+
+        h5 {
+            font-family: 'Roboto', sans-serif;
+            color: #ffffff;
+            font-size: 1rem;
+            font-weight: 700;
+            letter-spacing: 1px;
+            margin-bottom: 10px;
+        }
+
+        #projects,
+        #about,
+        #testimonials,
+        #contact {
+            padding-top: 75px;
         }
 
         .container {
