--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     <title>Angelika Wysocka - Web Developer & Designer Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" media="print"
         onload="this.media='all'">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
-        media="print" onload="this.media='all'">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <noscript>
@@ -242,28 +240,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home" aria-label="Navigate to home section"><i
-                                class="bi bi-house-fill" aria-hidden="true"></i></a>
+                        <a class="nav-link" href="#home" aria-label="Navigate to home section"><img src="images/icons/home.svg" alt="Home" class="nav-icon" width="25px" height="25px"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about" aria-label="Navigate to about section"><i
-                                class="bi bi-person-fill" aria-hidden="true"></i></a>
+                        <a class="nav-link" href="#about" aria-label="Navigate to about section"><img src="images/icons/about_me.svg" alt="About" class="nav-icon" width="25px" height="25px"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#skills" aria-label="Navigate to skills section"><i
-                                class="bi bi-code-square" aria-hidden="true"></i></a>
+                        <a class="nav-link" href="#skills" aria-label="Navigate to skills section"><img src="images/icons/skills.svg" alt="Skills" class="nav-icon" width="25px" height="25px"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects" aria-label="Navigate to projects section"><i
-                                class="bi bi-folder-fill" aria-hidden="true"></i></a>
+                        <a class="nav-link" href="#projects" aria-label="Navigate to projects section"><img src="images/icons/projects.svg" alt="Projects" class="nav-icon" width="25px" height="25px"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#testimonials" aria-label="Navigate to testimonials section"><i
-                                class="bi bi-chat-quote-fill" aria-hidden="true"></i></a>
+                        <a class="nav-link" href="#testimonials" aria-label="Navigate to testimonials section"><img src="images/icons/testimonials.svg" alt="Testimonials" class="nav-icon" width="25px" height="25px"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact" aria-label="Navigate to contact section"><i
-                                class="bi bi-envelope-fill" aria-hidden="true"></i></a>
+                        <a class="nav-link" href="#contact" aria-label="Navigate to contact section"><img src="images/icons/contact.svg" alt="Contact" class="nav-icon" width="25px" height="25px"></a>
                     </li>
                 </ul>
             </div>
@@ -913,7 +905,7 @@
 
 
     <button id="scrollToTop" class="scroll-to-top">
-        <i class="bi bi-arrow-up-circle-fill"></i>
+        <img src="images/icons/back_to_top.svg" alt="Scroll to top" class="scroll-to-top-icon" width="45px" height="45px">
     </button>
 
     <button class="talk-button modal-button">
