--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
         onload="this.media='all'">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
-        <link rel="preload" rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap"
-            onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap">
     </noscript>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
-        <link rel="preload" rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap"
-            onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap">
     </noscript>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="js/script.js" defer></script>
@@ -240,22 +238,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home" aria-label="Navigate to home section"><img src="images/icons/home.svg" alt="Home" class="nav-icon" width="25px" height="25px"></a>
+                        <a class="nav-link" href="#home" aria-label="Navigate to home section"><img src="images/icons/home.svg" alt="Home" class="nav-icon" width="25" height="25"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about" aria-label="Navigate to about section"><img src="images/icons/about_me.svg" alt="About" class="nav-icon" width="25px" height="25px"></a>
+                        <a class="nav-link" href="#about" aria-label="Navigate to about section"><img src="images/icons/about_me.svg" alt="About" class="nav-icon" width="25" height="25"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#skills" aria-label="Navigate to skills section"><img src="images/icons/skills.svg" alt="Skills" class="nav-icon" width="25px" height="25px"></a>
+                        <a class="nav-link" href="#skills" aria-label="Navigate to skills section"><img src="images/icons/skills.svg" alt="Skills" class="nav-icon" width="25" height="25"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects" aria-label="Navigate to projects section"><img src="images/icons/projects.svg" alt="Projects" class="nav-icon" width="25px" height="25px"></a>
+                        <a class="nav-link" href="#projects" aria-label="Navigate to projects section"><img src="images/icons/projects.svg" alt="Projects" class="nav-icon" width="25" height="25"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#testimonials" aria-label="Navigate to testimonials section"><img src="images/icons/testimonials.svg" alt="Testimonials" class="nav-icon" width="25px" height="25px"></a>
+                        <a class="nav-link" href="#testimonials" aria-label="Navigate to testimonials section"><img src="images/icons/testimonials.svg" alt="Testimonials" class="nav-icon" width="25" height="25"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact" aria-label="Navigate to contact section"><img src="images/icons/contact.svg" alt="Contact" class="nav-icon" width="25px" height="25px"></a>
+                        <a class="nav-link" href="#contact" aria-label="Navigate to contact section"><img src="images/icons/contact.svg" alt="Contact" class="nav-icon" width="25" height="25"></a>
                     </li>
                 </ul>
             </div>
@@ -905,7 +903,7 @@
 
 
     <button id="scrollToTop" class="scroll-to-top">
-        <img src="images/icons/back_to_top.svg" alt="Scroll to top" class="scroll-to-top-icon" width="45px" height="45px">
+        <img src="images/icons/back_to_top.svg" alt="Scroll to top" class="scroll-to-top-icon" width="45" height="45">
     </button>
 
     <button class="talk-button modal-button">
