--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                             <span class="title-item">Problem Solver</span>
                         </span>
                     </div>
-                    <p class="intro-text">I'm passionate about building modern, user-friendly websites that bring ideas
+                    <p>I'm passionate about building modern, user-friendly websites that bring ideas
                         to
                         life. I'm passionate about turning ideas into websites that are both beautiful and functional.
                     </p>
