--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     }
     </script>
     <link rel="preload" as="image" href="images/light_background.webp">
+    <link rel="preload" as="image" href="images/light_background-mobile.webp">
     <link rel="preload" as="image" href="images/AngelikaWysocka_dark.webp">
     <link rel="preload" as="image" href="images/AngelikaWysocka_dark-mobile.webp">
     <style>
@@ -948,7 +949,7 @@
     <!-- Lightbox Modal for Project Images -->
     <div id="imageModal">
         <div class="modal-image-container">
-            <img id="modalImage" src="images/placeholder.webp" alt="Enlarged project image view"
+            <img id="modalImage" src="images/placeholder.svg" alt="Enlarged project image view"
                 aria-label="Project preview in modal">
         </div>
     </div>
