--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     </script>
     <link rel="preload" as="image" href="images/light_background.webp">
     <link rel="preload" as="image" href="images/light_background-mobile.webp">
+    <link rel="preload" as="image" href="images/dark_background.webp">
+    <link rel="preload" as="image" href="images/dark_background-mobile.webp">
     <link rel="preload" as="image" href="images/AngelikaWysocka_dark.webp">
     <link rel="preload" as="image" href="images/AngelikaWysocka_dark-mobile.webp">
     <style>
