--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
     <!-- Lightbox Modal for Project Images -->
     <div id="imageModal">
         <div class="modal-image-container">
-            <img id="modalImage" src="images/placeholder.svg" alt="Enlarged project image view"
+            <img id="modalImage" src="images/portfolio_items/joSmith/navMap.webp" alt="Enlarged project image view"
                 aria-label="Project preview in modal">
         </div>
     </div>
