--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
                 <section id="home">
                     <div class="section-heading">
                         
-                        <span class="im-line"> <span class="hello-line"> <span class="hello-line-text">Hello</span> <img src="images/icons/hand.svg" alt="Animated waving hand emoji"
-                            class="wave"></span> I'm <img src="images/icons/name.svg"
-                                alt="Angelika Wysocka handwritten signature" class="name">.</span>
+                        <span class="im-line"> <span class="hello-line"> <span class="section-heading hello-line-text">Hello</span> <img src="images/icons/hand.svg" alt="Animated waving hand emoji"
+                            class="wave"></span> <span class="hello-line-text">I'm</span> <img src="images/icons/name.svg"
+                                alt="Angelika Wysocka handwritten signature" class="name"><span class="hello-line-text">.</span></span>
                         <br class="im-line-break">
                         <div class="titles-container">
                         <span class="im-line-two">I'm</span> <span class="letter">a</span>
