thentheeth one commit

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 </section>
 
                 <section id="about">
-                    <h2 class="section-heading">About Me</h2>
+                    <h2 class="section-heading section-title">About Me</h2>
                     <p>I'm a proud mum of two who loves making memories with my children. </p>
                     <p>I've always been eager to learn,
                         which led me through careers in childcare, accounting, beauty, and IT — but nothing clicked like
@@ -369,7 +369,7 @@
                 </section>
 
                 <section id="skills">
-                    <h2 class="section-heading">Skills</h2>
+                    <h2 class="section-heading section-title">Skills</h2>
                     <div class="skills-grid">
                         <div class="skill-box">
                             <img src="images/icons/html.svg" alt="HTML5 - Web Development Markup Language"
@@ -469,7 +469,7 @@
                 </section>
 
                 <section id="projects">
-                    <h2 class="section-heading">Projects</h2>
+                    <h2 class="section-heading section-title">Projects</h2>
                     <div id="projectCarousel" class="carousel slide" style="position: relative;"
                         data-bs-interval="false">
                         <div class="carousel-controls-top">
@@ -786,7 +786,7 @@
                 </section>
 
                 <section id="testimonials">
-                    <h2 class="section-heading">Testimonials</h2>
+                    <h2 class="section-heading section-title">Testimonials</h2>
                     <div id="testimonialCarousel" class="carousel slide testimonials-container position-relative"
                         data-bs-ride="carousel" data-bs-interval="6000">
                         <div class="testimonial-controls carousel-controls-top">
